<resources>
    <string name="app_name">Lost Cities Counter</string>

    <string name="jugador1">Player 1</string>
    <string name="jugador2">Player 2</string>
    <string name="ronda1">Round 1</string>
    <string name="ronda2">Round 2</string>
    <string name="ronda3">Round 3</string>
    <string name="gana">Winner: </string>
    <string name="empate">TIE</string>
    <string name="total">TOTAL</string>
    <string name="valorInicial">0</string>

    <string name="expedicion">Delivery</string>
	<string name="contrato">Invest</string>
	<string name="carta2">2</string>
	<string name="carta3">3</string>
	<string name="carta4">4</string>
	<string name="carta5">5</string>
	<string name="carta6">6</string>
	<string name="carta7">7</string>
	<string name="carta8">8</string>
	<string name="carta9">9</string>
	<string name="carta10">10</string>
	
	<string name="aceptar">OK</string>
	<string name="cancelar">Cancel</string>
	<string name="nombre_titulo">Name Change</string>
	<string name="nombre">Name: </string>

	<string name="creditos">Credits</string>
	<string name="detalle_creditos">
	    \nDeveloper: David Asensio (@dasensio13)
	    \nGame Designer: Reiner Knizia (@ReinerKnizia)
		\nYear Published: 1999
		\nBGG: http://www.boardgamegeek.com/boardgame/50/lost-cities
		\n\nVersion 0.1 - 05/04/2012
	    \n* Beta Development phase
	    \n* Future options:
	    \n\t- Save Game
	    \n\t- Change number of rounds
	    \n\t- Better design for info and credits
	</string>

	<string name="instrucciones">About</string>
	<string name="detalle_instrucciones">
	    \n* You can change player names by selecting them.
	    \n* You set the value of the delivery selecting it and the cards played on it.
	    \n* Total values and winner player are updated automatically.
	</string>
	
</resources>